cmake_minimum_required(VERSION 3.25)
project(Milestone1_Team16)

set(CMAKE_CXX_STANDARD 17)

add_executable(Milestone1_Team16 main.cpp
        Object.h
        Character.h
        Hero.h
        Gun.h
        Pistol.h
        Bazooka.h
        Rifle.h
        Monster.h
        MedicHero.h
        DemolitionHero.h
        GhostMonster.h
        TankMonster.h
        Item.h
        Ammo.h
        Potion.h
        Game.h)
